--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,14 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- Mockito for mock tests -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.11.0</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
