Add swagger to properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+
+springdoc.api-docs.path=/api/v1/docs
+springdoc.swagger-ui.path=/api/v1/docs/ui
+springdoc.swagger-ui.operations-sorter=method
+
+
