--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,12 @@
             <artifactId>mockito-core</artifactId>
             <version>5.11.0</version>
         </dependency>
+        <!--Openapi for documenting endpoints-->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.0.4</version>
+        </dependency>
 
 
     </dependencies>
